# first

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
first/: __init__.py  app.py  audio.py  audioserver.py  config.py  decorator.py  fib.py  parser.py  phone.py  postapp.py  server.py
