[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["is0ly <iljaosipov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
flask = "^2.2.3"
jsonify = "^0.5"
flask-sqlalchemy = "^3.0.3"
psycopg2-binary = "^2.9.5"
flask-migrate = "^4.0.4"
pyaudio = "^0.2.13"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"
pre-commit = "^3.2.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
